frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* this for all input */
input:focus-visible {
  outline: 2px solid #439BFF;

}

/* to remove default date icon  */
input[type="date"]::-webkit-inner-spin-button,
input[type="date"]::-webkit-calendar-picker-indicator {
    display: none;
    -webkit-appearance: none;
}

/* all placeholder color */
input::placeholder{
  color: #757575;
  width: auto;
  height: 27px;
  ;
}

/* all input type date placeholder color  */
input[type=date]:invalid::-webkit-datetime-edit {
  color: #757575;
}


/* all action and view button color  and pophover*/
.tooltip-text {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 100%; /* Position it above the icon */
  margin-bottom: 8px; /* Space between the tooltip and the icon */
  background: linear-gradient(to right, #0f0202, #0f0202); /* Gradient background */
  color: white;
  font-size: 0.875rem; /* Text size */
  border-radius: 0.375rem; /* Rounded corners */
  padding: 0.5rem 0.75rem; /* Padding */
  opacity: 0;
  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out; /* Smooth transition */
  visibility: hidden; /* Initially hidden */
  z-index: 10; /* Ensure it appears above other elements */
}

.tooltip-arrow {
  position: absolute;
  top: 100%; /* Position it below the tooltip */
  left: 50%;
  margin-left: -5px; /* Center it */
  border-width: 5px;
  border-style: solid;
  border-color: #0f0202 transparent transparent transparent; /* Color of the arrow */
}

.group:hover .tooltip-text {
  opacity: 1; /* Show the tooltip on hover */
  visibility: visible; /* Make it visible */

  transform: translateX(-50%) translateY(-5px); }/* Slight upward movement */

  

  transform: translateX(-50%) translateY(-5px); /* Slight upward movement */
}

.border-input{
  border: 1px solid #EAE5FF !important ;

}

